--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@gecugamo/web-component-stencil",
   "version": "0.0.3",
   "description": "Stencil Component Starter",
-  "main": "dist/index.cjs.js",
+  "main": "dist/components/web-component-stencil.js",
   "module": "dist/components/web-component-stencil.js",
   "es2015": "dist/esm/index.mjs",
   "es2017": "dist/esm/index.mjs",
