--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "collection": "dist/collection/collection-manifest.json",
   "collection:main": "dist/collection/index.js",
   "unpkg": "dist/web-component-stencil/web-component-stencil.esm.js",
+  "exports": {
+    ".": "./dist/components/web-component-stencil.js",
+    "./web-component-lit.js": "./dist/components/web-component-stencil.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ionic-team/stencil-component-starter.git"
